<resources>
    <string name="app_name">RogoSample</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rogocore_sdk_sample">RogoCore_SDK_Sample</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="verify">Verify</string>
    <string name="change_password">Change password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up_success">Sign up success</string>
    <string name="enter_verification_code">please enter verification code</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="sign_out">Sign out</string>
    <string name="check_your_information">Check your information</string>
    <string name="signed_out">Signed out</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="verification_code">Verification code</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="sign_in_success">Sign in success - Next options</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="phone_number">Phone number</string>
    <string name="cancel">Cancel</string>
    <string name="check_your_password">Check your password</string>
    <string name="to_continue">Continue</string>
    <string name="retry">Retry</string>
    <string name="options_location">Options Location</string>
    <string name="back_to_sign_out">Back to Sign Out</string>
    <string name="get_list_location">Get List Location</string>
    <string name="add_location">Add Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="delete_location">Delete Location</string>
    <string name="get_list">Get List</string>
    <string name="to_authentication">To authentication</string>
    <string name="get_location_success">Get list success - Select a location - Next page</string>
    <string name="home">Nhà riêng</string>
    <string name="apartment">Chung cư</string>
    <string name="hotel">Khách sạn</string>
    <string name="motel">Nhà nghỉ</string>
    <string name="office">Văn phòng</string>
    <string name="other">Khác</string>
    <string name="restaurant">Nhà hàng</string>
    <string name="homestay">Homestay</string>
    <string name="undefined">Chưa xác định</string>
    <string name="location_name">Location name</string>
    <string name="update_location_name">Update location name</string>
    <string name="location_type">Location type</string>
    <string name="choose_location">Choose location</string>
    <string name="delete_success">Delete success</string>
    <string name="delete_element_success">Delete element success</string>
    <string name="delete_element_failure">Delete element failure</string>
    <string name="update_success">Update success</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="add_success">Add success</string>
    <string name="group">Group</string>
    <string name="group_functions">Group functions</string>
    <string name="virtual_group_functions">Virtual group functions</string>
    <string name="get_list_group">Get list group</string>
    <string name="add_group">Add group</string>
    <string name="edit_group">Edit group</string>
    <string name="delete_group">Delete group</string>
    <string name="bind_member">Bind member</string>
    <string name="unbind_member">Unbind member</string>
    <string name="virtual_group">Virtual group</string>
    <string name="create_virtual_group">Create virtual group</string>
    <string name="bind_member_to_virtual_group">Bind member to virtual group</string>
    <string name="unbind_member_to_virtual_group">Unbind member to virtual group</string>
    <string name="device">Device</string>
    <string name="device_function">Device functions</string>
    <string name="get_list_device">Get list device</string>
    <string name="add_device">Add device</string>
    <string name="set_up">Set up</string>
    <string name="edit_device">Edit device</string>
    <string name="delete_device">Delete device</string>
    <string name="locate_device_postion">Locate device postion</string>
    <string name="locate_element_postition">Locate element postion</string>
    <string name="silence_alarm">Silence alarm</string>
    <string name="request_self_test">Request self test</string>
    <string name="request_self_test_network">Request self test network</string>
    <string name="delete_element_device">Delete element device</string>
    <string name="group_name">Group name</string>
    <string name="group_type">Group type</string>
    <string name="update_group_name">Update group name</string>
    <string name="update_device_name">Update device name</string>
    <string name="choose_group">Choose group</string>
    <string name="choose_device">Choose device</string>
    <string name="change_element_label">Change element_label</string>
    <string name="get_list_success">Get list success</string>
    <string name="empty">Empty!</string>
    <string name="add_box">Add Box</string>
    <string name="add_ble">Add Device BLE</string>
    <string name="add_zigbee_device">Add Zigbee Device</string>
    <string name="add_rf_device">Add Rf Device</string>
    <string name="add_device_ir">Add Device IR</string>
    <string name="add_wile_device">Add Wile Device</string>
    <string name="add_ir_remote">Add IR Remote</string>
    <string name="add_ir_ac_remote">Add IR AC Remote</string>
    <string name="start_add_device_box">Start Add Device Box</string>
    <string name="generate_code">Generate code</string>
    <string name="connect_to_device_box">Connect to device box</string>
    <string name="enter_the_code_on_the_box_device">Enter the code on the box device</string>
    <string name="select_hub_device">Select hub_device</string>
    <string name="select_ir_device_type">Select device type to learn IR</string>
    <string name="select_available_ir_code">Select available IR code</string>
    <string name="select_device_manufacturer">Select manufacturer</string>
    <string name="select_protocol">Select protocol</string>
    <string name="select_add_ir_remote_type">Select add Ir Remote type</string>
    <string name="select_button_to_learn">Select button to learn</string>
    <string name="select_wifi_ssd">Select Wifi SSD</string>
    <string name="selected_wifi_ssid">Selected WiFi ssid</string>
    <string name="device_name">Device name</string>
    <string name="current_state">Current state</string>
    <string name="state">State</string>
    <string name="current_battery">Current battery</string>
    <string name="is_online">Is online?</string>
    <string name="is_wall_mounted">Is wall mounted</string>
    <string name="has_issues">Has issues?</string>
    <string name="current_lux">Current lux</string>
    <string name="current_temp">Current temp</string>
    <string name="test_alarm">Test alarm</string>
    <string name="state_of_sub_devices">State of sub devices</string>
    <string name="history_of_device">History of device</string>
    <string name="current_issues">Current issues</string>
    <string name="firmware">Firmware</string>
    <string name="current_firmware">Current Firmware</string>
    <string name="newest_firmware">Newest Firmware</string>
    <string name="detecting_device">Detecting device</string>
    <string name="select_group_to_add_device">Select group to add device</string>
    <string name="device_sub_type">DeviceSubType</string>
    <string name="progress_to_add_device">Progress to add device</string>
    <string name="no_group">Chưa có nhóm phòng</string>
    <string name="turn_on_the_bluetooth">Turn on the bluetooth</string>
    <string name="connect_to">Connect to %1$s</string>
    <string name="fan">Fan</string>
    <string name="TV">TV</string>
    <string name="air_con">Air Conditioner</string>
    <string name="cannot_connect">Cannot connect: %1$s</string>
    <string name="scanning_device">Scanning device</string>
    <string name="connect">Connect</string>
    <string name="device_is_available">Device is available</string>
    <string name="device_is_unvailable">Device is unvailable</string>
    <string name="start_scan">Start scan</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="no_available_device">No available device</string>
    <string name="set_up_fail">Set up fail</string>
    <string name="wifi_password">Wifi password</string>
    <string name="onoff">On/Off</string>
    <string name="openclose">Open/Close</string>
    <string name="lock_unlock">Lock/Unlock</string>
    <string name="brightness">Brightness</string>
    <string name="kelvin">Kelvin</string>
    <string name="saturation">Saturation</string>
    <string name="color">Color</string>
    <string name="hue">Hue</string>
    <string name="close">Close</string>
    <string name="stop">Stop</string>
    <string name="open">Open</string>
    <string name="moving">Moving</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="control_device">Control device</string>
    <string name="rf_control">RF control</string>
    <string name="curtain">Curtain</string>
    <string name="gate">Gate</string>
    <string name="wifi_problem">There\'s something wrong with wifi</string>
    <string name="wifi_list">WiFi list</string>
    <string name="num_0">Number 0</string>
    <string name="num_1">Number 1</string>
    <string name="num_2">Number 2</string>
    <string name="num_3">Number 3</string>
    <string name="num_4">Number 4</string>
    <string name="num_5">Number 5</string>
    <string name="num_6">Number 6</string>
    <string name="num_7">Number 7</string>
    <string name="num_8">Number 8</string>
    <string name="num_9">Number 9</string>
    <string name="power">Power</string>
    <string name="power_on">On</string>
    <string name="power_off">Off</string>
    <string name="sync_on">Sync on</string>
    <string name="sync_off">Sync off</string>
    <string name="fan_speed">Fan speed</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="channel_up">Channel Up</string>
    <string name="channel_down">Channel Down</string>
    <string name="channel_list">Channel List</string>
    <string name="volume_up">Volume up</string>
    <string name="volume_down">Volume down</string>
    <string name="mute">Mute</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="add_ir_remote_success">Add Ir Remote success</string>
    <string name="smart_name">Smart name</string>
    <string name="add_command">Add command</string>
    <string name="select_device">Select device</string>
    <string name="add_smart_scenario">Add smart scenario</string>
    <string name="add_smart_schedule">Add smart schedule</string>
    <string name="add_smart_automation">Add smart automation</string>
    <string name="smart_scenario">Smart Scenario</string>
    <string name="smart_schedule">Smart Schedule</string>
    <string name="smart_automation">Smart Automation</string>
    <string name="select_element">Select element</string>
    <string name="add_scenario">Add scenario</string>
    <string name="add_schedule">Add schedule</string>
    <string name="smart">Smart</string>
    <string name="smart_functions">Smart functions</string>
    <string name="get_list_smart_scenario">Get List Smart Scenario</string>
    <string name="get_list_smart_schedule">Get List Smart Schedule</string>
    <string name="get_list_smart_automation">Get List Smart Automation</string>
</resources>