<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">
        <include layout="@layout/toolbar"
            android:id="@+id/toolbar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_username"
            android:hint=""
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/bg_input_black_10dp"
            android:paddingVertical="15dp"
            android:paddingStart="5dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_email"
            android:hint=""
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/bg_input_black_10dp"
            android:paddingVertical="15dp"
            android:paddingStart="5dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_password"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/bg_input_black_10dp"
            android:paddingVertical="15dp"
            android:paddingStart="5dp"
            android:layout_marginTop="10dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sign_in"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="@drawable/btn_yellow_20dp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ln_options"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_success"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_to_location"
                android:text="@string/options_location"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="@drawable/btn_yellow_20dp"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_to_sign_out"
                android:text="@string/back_to_sign_out"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="@drawable/btn_yellow_20dp"
                android:backgroundTint="@color/red"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <com.example.rogosample.view.PresenceView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/presence_view"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
</layout>