<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp">
        <include layout="@layout/toolbar"
            android:id="@+id/toolbar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_hub_device"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_hub"
            android:layout_marginTop="5dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_start_scan"
            android:text="@string/start_scan"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="@drawable/btn_yellow_20dp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ln_device"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_device_name"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_input_black_10dp"
                android:paddingVertical="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_group_to_add_device"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_group"
                android:background="@drawable/bg_input_black_10dp"
                android:layout_marginTop="5dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_add_device"
                android:text="@string/add_device"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="@drawable/btn_yellow_20dp"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>
</layout>